2016-06-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.h (awk_string): Add comment about the potential lack of
	NUL-termination.

2016-06-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h: Add a comment regarding the potential lack of NUL-termination
	for Node_val strings.

2016-06-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* node.c (r_format_val): Do not free stptr unless STRCUR is set.
	This is safer than testing for non-NULL stptr, since, for example,
	pp_number copies a node and calls r_format_val, but does not bother
	to set stptr to NULL beforehand.

2016-06-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* node.c (r_force_number): When checking for trailing spaces, protect
	against running off the end of the string.
	* mpfr.c (force_mpnum): Ditto.

2016-06-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* builtin.c (do_print): There's actually no reason to test whether a
	value is a number, since the STRCUR flag and stfmt value contain all
	the necessary info, as in awk.h:force_string.

2016-06-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* builtin.c (do_print): Do not use OFMT to print strnum values. We
	accomplish this by calling format_val for a NUMBER only
	if there is no string currently available, or if stfmt equals
	neither -1 nor OFMTidx.

2016-06-26         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h: Edit some comments. Add others. Minor coding style changes.
	* builtin.c (format_tree): Restore a comment.
	(do_mktime): Restore saving/restoring of byte after format string.
	(do_sub): Coding style. Use %.*s in warning message.
	(nondec2awknum): Restore saving/restoring of byte after string value
	being converted.
	* eval.c: Minor coding style edits.
	* int_array.c (is_integer): Fix order of checks for not
	updating string value: check length == 0 before testing values.